<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_sv_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/empty_tall_divider_8dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:showDividers="middle"
        tools:context=".AddActivity">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            app:srcCompat="@drawable/app_logo" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="ADD NEW SERVICE"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Adding service for the"
            android:textSize="12sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider14"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pets"
            android:textSize="10sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/add_cb_dogs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Dogs"
                android:textSize="10sp" />

            <CheckBox
                android:id="@+id/add_cb_cats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cats"
                android:textSize="10sp" />

            <CheckBox
                android:id="@+id/add_cb_birds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Birds"
                android:textSize="10sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Others"
            android:textSize="10sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/add_cb_babies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Babies"
                android:textSize="10sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider8"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Service info"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/add_et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/title_hint"
            android:inputType="text"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/add_et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/description_hint"
            android:inputType="text|textMultiLine"
            android:lines="4"
            android:minLines="4"
            android:singleLine="false"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/add_et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/address_hint"
            android:inputType="text"
            android:textSize="12sp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Contact Info"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/add_et_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone_hint"
            android:inputType="text"
            android:textSize="12sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Set availability"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/add_et_startdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/start_date"
                android:inputType="number"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/add_et_enddate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/end_date"
                android:inputType="number"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/add_et_starttime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/start_time"
                android:inputType="number"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/add_et_endtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/end_time"
                android:inputType="number"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Set Pricing"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/add_et_starting_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/starting_price_hint"
                android:inputType="number"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/add_et_maximum_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/maximum_price_hint"
                android:inputType="number"
                android:textSize="12sp" />
        </LinearLayout>

<!--        <fragment-->
<!--            android:id="@+id/adddelivery_fragment_searchquery"-->
<!--            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"-->
<!--            android:layout_width="fill_parent"-->
<!--            android:layout_height="fill_parent"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            tools:context=".AddDeliveryActivity" />-->


        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Set location on map"
            android:textSize="12sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/adddelivery_rl_maps"
            android:layout_width="match_parent"
            android:layout_height="350dp">

            <fragment
                android:id="@+id/adddelivery_fragment_map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/adddelivery_iv_marker"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:layout_marginTop="8dp"
                android:scaleType="center"
                android:src="@drawable/ic_location" />

        </RelativeLayout>

        <Button
            android:id="@+id/add_btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_btn"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
</ScrollView>