<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".HomeActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_requests_home"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/theme_color"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toStartOf="@+id/cv_mychats_home"
        app:layout_constraintStart_toEndOf="@+id/cv_myrequests_home"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:text="Requests"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_requestsnoti_home"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="4dp"
            android:backgroundTint="@android:color/holo_green_light"
            android:visibility="gone"
            app:cardCornerRadius="32dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_mychats_home"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/theme_color"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_mychatsnoti_home"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="4dp"
            android:backgroundTint="@android:color/holo_green_light"
            android:visibility="gone"
            app:cardCornerRadius="32dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:text="Chats"
            android:textColor="@color/white"
            android:textSize="10sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_myrequests_home"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/theme_color"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_myrequestsnoti_home"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="4dp"
            android:backgroundTint="@android:color/holo_green_light"
            android:visibility="gone"
            app:cardCornerRadius="32dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:text="My Requests"
            android:textColor="@color/white"
            android:textSize="10sp" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/home_btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Exit"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/home_btn_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/see_list_btn"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/home_btn_myreminders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/home_btn_chatbot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Chat with chatbot"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/home_btn_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/home_btn_map"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/see_map_btn"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/home_btn_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/home_btn_myreminders"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="MY REMINDERS"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/home_btn_chatbot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/home_btn_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_new_btn"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/home_btn_map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/home_btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_mychats_home"
        app:srcCompat="@drawable/app_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>